--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  
+  <meta property="og:image" content="https://i.ibb.co/xf4tNVs/vr-female.jpg" />
+  <meta property="og:description" content="A Digital Marketing, Tech & Life Style Blog" />
 
 
   <!-- Google Fonts -->
