--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta property="og:image" content="https://i.ibb.co/xf4tNVs/vr-female.jpg" />
   <meta property="og:image:type" content="image/png">
-  <meta property="og:description" content="A Digital Marketing, Tech & Life Style Blog" />
+  <meta property="og:description" content="A Digital Marketing, Tech & Lifestyle Blog" />
 
 
   <!-- Google Fonts -->
@@ -253,7 +253,7 @@
     <div class="footer-section about">
     <h1 class="logo-text"><span>Niyel</span>Blog</h1>
     <P>
-      Niyel Blog is a Digital Marketing, Tech & Life Style blog. Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum vero eius repellendus aperiam impedit odio, sit repudiandae a autem dignissimos!
+      Niyel Blog is a Digital Marketing, Tech & Lifestyle Blog. Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum vero eius repellendus aperiam impedit odio, sit repudiandae a autem dignissimos!
     </P>
     <div class="contact">
       <span><i class="fa fa-phone"></i> &nbsp; +234-567-89123</span>
